--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: aldz
 author: GitHub User
 email: yujielhao@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Beautiful is better than ugly.Explicit is better than implicit.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 show_excerpts: false # set to true to show excerpts on the homepage
 
 plainwhite:
@@ -32,7 +34,7 @@ plainwhite:
     # instagram: jekyll
     # linkedin: jekyll
     # pinterest: jekyll
-    youtube: yujielhao
+    # youtube: yujielhao
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
     # youtube_channel_name: CloudCannon
     # telegram: jekyll
