--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@ title: aldz
 author: GitHub User
 email: yujielhao@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My learning exchange platform, some stories about programming, 
+  life, experience, experience, welcome to share.
 show_excerpts: false # set to true to show excerpts on the homepage
 
 plainwhite:
